<resources>
    <string name="app_name">Task5</string>
    <string name="result_will_be_shown_here">Result will be shown here…</string>
    <string name="submit">Submit</string>
    <string name="enter_card_number">Enter card number</string>
    <string name="enter_information_first">Enter user info first</string>
    <string name="enter_your_guess">Enter your guess</string>
    <string name="try_again">Try Again!</string>
    <string name="enter_name">Enter name</string>
</resources>